# Birds_species_classification

./: .gitignore  Makefile  README.md  config.py  environment.yml  get_data_kaggle.py  logger.py  model_initialization_training.py  preprocessing.py  requirements.txt  setup.cfg  setup.py  test.ipynb  test_environment.py  utils.py
Models/: BaseModel.py  ResNet.py  VGG_net.py
datasets/: fruits_veg_dataset.pt  fruits_veg_dataset.py
docs/: Makefile  conf.py  index.rst  make.bat
src/data_creation/: get_data_kaggle.py
src/models/: model_training.py  predict_model.py
