[metadata]
name = kbproject
version = 0.4.1
author = Kostiantyn Bevzuk
author_email = kosbevzuk@gmail.com
description = package for using pytorch for diffrenet cv problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kostiantyn-Bevzuk/Fruits_vegetables_classification
project_urls =
    repository = https://github.com/Kostiantyn-Bevzuk/Fruits_vegetables_classification
classifiers =
    Programming Language :: Python :: 3.10
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
[options.packages.find]
where = .
[options.entry_points]
console_scripts =
    get_data = src.data_creation.get_data_kaggle:download_kaggle_dataset
    generate_annotations = src.data_creation.get_data_kaggle:generate_annotations
    train_model = src.models.model_training:main